[package]
name = "tch_packed"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tch = "0.14.0"

[build-dependencies]
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6"
zip-extensions = "0.6"
[package.metadata.cargo-post.dependencies]
execute = "0.2.13"
glob = "0.3.1"